@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*ideas-bin-1.0.3.6 (07 Jul 2010)
+
+  07 Jul 2010; Michał Ziąbkowski <mziab@o2.pl> +ideas-bin-1.0.3.6.ebuild:
+  Bumped.
+
 *ideas-bin-1.0.3.5 (05 Jun 2010)
 
   05 Jun 2010; Michał Ziąbkowski <mziab@o2.pl>
